<resources>
    <string name="app_name">Score Keeper</string>
    <string name="app_version">v1.1.3debug</string>
    <string name="versionCode">121</string>
    <string name="title">Title</string>
    <string name="action_history">History</string>
    <string name="action_settings">Settings</string>
    <string name="new_game">New Game</string>
    <string name="edit_game_question">Change Game?</string>
    <string name="player_s_name">Player\'s name</string>
    <string name="add_player">Add Player</string>
    <string name="_0" translatable="false">0</string>
    <string name="date">Date</string>
    <string name="dice">Dice</string>
    <string name="no">No</string>
    <string name="change_set_score">Change Set Score</string>
    <string name="new_set">New Set</string>
    <string name="sets">Sets</string>
    <string name="message">Message</string>
    <string name="num_sets">Number of sets</string>
    <string name="unfinish">Continue</string>
    <string name="complete">Complete</string>
    <string name="no_translaters">No Translators yet. :)</string>
    <string name="remind_me_later">Later</string>
    <string name="report">Report</string>
    <string name="start_game">Start Game</string>
    <string name="date_and_time">Date and Time</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="winner">Winner:</string>
    <string name="set">Set</string>
    <string name="are_you_sure_edit_game">Are you sure you want to change this game?</string>
    <string name="loser">Loser:</string>
    <string name="git_link">https://github.com/SDS-Studios/ScoreKeeper/</string>
    <string name="scorekeeper_by_sds_studios">ScoreKeeper By SDS-Studios.</string>
    <string name="about_page_info">
        \n If you encounter any problems, feel free to submit them too our GitHub repository.
        \n Feel free to create pull requests and improve our code.
        \n Please rate and review Score Keeper in the Play Store.
    </string>
    <string name="github">Our Github</string>
    <string name="delete_all_games">Delete All Games</string>
    <string name="delete_all_presets">Delete All Presets</string>
    <string name="quit">Quit</string>
    <string name="reset">Reset</string>
    <string name="website" translatable="false">https://sds-studios.github.io/</string>
    <string name="title_activity_home">Home</string>
    <string name="About">About</string>
    <string name="game_info">Game Info</string>
    <string name="time_limit">Time Limit</string>
    <string name="change_player">Change Player</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_edit_game">Change Game</string>
    <string name="no_games">You haven\'t played any games!</string>
    <string name="graph_coming_soon">Feature is coming soon ;)</string>
    <string name="no_completed_games">You haven\'t completed any games!</string>
    <string name="no_games_started">You haven\'t started any games!</string>
    <string name="recent_games">Recent Games:</string>
    <string name="games_you_have_played">Games you have played:</string>
    <string name="your_score">Your Score:</string>
    <string name="cancel">Cancel</string>
    <string name="complete_game">Finish</string>
    <string name="delete_time_limits">Delete Time Limits</string>
    <string name="delete_all_games_mes">They will be gone forever!</string>
    <string name="players">Players</string>
    <string name="delete_game">Delete Game?</string>
    <string name="must_have_name">The player must have a name!</string>
    <string name="complete_later">Finish Later</string>
    <string name="delete">Delete</string>
    <string name="completed">Completed</string>
    <string name="completed_games">Completed Games:</string>
    <string name="games_in_progress">Unfinished Games:</string>
    <string name="unfinished">Unfinished</string>
    <string name="graph">Graph</string>
    <string name="invalid_length">Invalid Length</string>
    <string name="invalid_date_and_time">Invalid date and time!</string>
    <string name="duplicates_message">You can\'t have duplicate players!</string>
    <string name="all_games">All Games</string>
    <string name="name_already_exists">Name already exists.</string>
    <string name="quit_game">Quit Game?</string>
    <string name="edit">Edit</string>
    <string name="carry_on">Continue</string>
    <string name="reset_game_question">Reset Game?</string>
    <string name="continue_game_message">Do you want to continue the game or edit it?</string>
    <string name="more_than_two_players">You must have two or more players!</string>
    <string name="quit_game_message">Are you sure you want to quit this game. You won\'t lose your progress as it has been automatically saved.
        You can see the game in the History activity by clicking History in the side bar.</string>
    <string name="delete_game_message">Are you sure you want to delete this game? It will be gone forever!</string>
    <string name="reset_game_message">Are you sure you want to reset this game? You will lose all the scores in every set and the stopwatch will reset.</string>
    <string name="quit_setup_question">Quit Setup?</string>
    <string name="quit_setup_message">Are you sure you want to quit set-up?</string>
    <string name="time_limit_reached">Time up!</string>
    <string name="time_limit_question">Time is up! Do you want to finish the game or extend the time limit?</string>
    <string name="colorise_unfinished">Colorize Unfinished Games</string>
    <string name="extend">Extend</string>
    <string name="create">Create</string>
    <string name="hour">Hours:</string>
    <string name="minute">Minutes:</string>
    <string name="seconds">Seconds:</string>
    <string name="quit_setup">Quit Setup</string>
    <string name="players_and_scores">Players and Scores</string>
    <string name="length">Length</string>
    <string name="title_activity_time_limit">TimeLimit</string>
    <string name="default_game_title">The Game With No Name</string>
    <string-array name="numGames">
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
        <item name="4">4</item>
        <item name="5">5</item>
    </string-array>
    <string name="done">Done</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>
    <string name="no_time_limit">Time Limit</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="preset_title">Preset</string>
    <string name="preset">Preset</string>
    <string name="create_preset">Save Preset</string>
    <string name="edit_player">Edit Player</string>
    <string name="edit_presets">Edit Presets</string>
    <string name="create_preset_message">What do you want to call it?</string>
    <string name="delete_presets_message">Select which presets to delete.</string>
    <string name="delete_time_limits_message">Select which time limits to delete.</string>
    <string name="delete_presets">Delete Presets</string>
    <string name="delete_players_message">Select which players to delete.</string>
    <string name="delete_players">Delete Players</string>
    <string name="delete_all">Delete All</string>
    <string name="default_title">Default Title</string>
    <string name="themes">Themes</string>
    <string name="_default">Default</string>
    <string name="okay">OK</string>
    <string name="version">Version</string>
    <string name="developers">Developers</string>
    <string name="translators">Translators</string>
    <string name="changelog">Changelog</string>
    <string name="googlecommunity">Google+ Community</string>
    <string name="rate_the_app">Rate and Review</string>
    <string name="opensourcelicenses">Open Source Licenses</string>
    <string name="max_num_on_dice">Max number on dice</string>
    <string name="advanced_options">Advanced Options (optional)</string>
    <string name="max_score">Winning Score</string>
    <string name="reverse_scoring">Reverse Scoring</string>
    <string name="has_won">has won</string>
    <string name="score_interval">Score Interval</string>
    <string name="diff_to_win">Score Difference to win</string>
    <string name="must_be_negative">Must be negative</string>
    <string name="add_remove_players">Add/Remove Players</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="export">Export</string>
    <string name="_import">Import</string>
    <string name="import_games">Import</string>
    <string name="import_games_message">The database must be in /ScoreKeeper folder. It will delete all of your games.</string>
    <string name="export_games">Export</string>
    <string name="export_games_message">You can find it in the "ScoreKeeper" folder.</string>
    <string name="last_played_message">E.g. 2016-05-23 16:58:12</string>
    <string name="help">Help</string>
    <string name="length_help_message">E.g. 12:59:58:3
     hour:minute:second:millisecond</string>
    <string name="turn_off">Turn Off</string>
    <string name="review">Review</string>
    <string name="please_review">Please Rate and Review</string>
    <string name="review_message">Please Rate and Review my app. Any feedback will be appreciated and if there is anything which does not satisfy you, please tell me, otherwise I can\'t fix it. :)</string>
    <string name="game">Game</string>
    <string name="events">Events</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="time_line">Timeline</string>
    <string name="receive_notifications">Receive Notifications</string>
    <string name="receive_notifications_summary">Receive Notifications from the developer about news and updates. They will not spam your notification drawer and will not be very often. It is just a way for the developer to communicate with their users occasionally.</string>
    <string name="starting_score">Starting Score</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="share">Share</string>
    <string name="dice_minimum">Min Dice Number</string>
    <string name="dice_maximum">Max Dice Number</string>
    <string name="info">Info</string>
    <string name="options">Options</string>
    <string name="advanced">Advanced</string>
    <string name="upgrade_title">ALL YOUR GAMES HAVE BEEN DELETED!</string>
    <string name="upgrade_message">All your games have been deleted when you updated to version 1.1 due to an overhaul in the code for the app.
        This is the only time this will happen.
        A backup of your old games has been made
        in the ScoreKeeper folder on your phone. I am extremely sorry for any inconvenience this may have caused."</string>
    <string name="you_have_no_unfinished_games">You have completed all your games!</string>
    <string name="you_have_played_no_games">You have played no games!</string>
    <string name="player_button_tutorial">Long press to deduct points</string>
    <string name="notes">Notes</string>
    <string name="create_time_limit">Create Time Limit</string>
    <string name="load_preset">Load Preset</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="time_limit_chosen_is_too_small">The Time Limit chosen is shorter than the time already played in the game. You can ignore this or reset the time played to 0 Seconds</string>
    <string name="ignore">Ignore</string>
    <string name="reset_time_played">Reset Time</string>
    <string name="delete_player">Delete Player</string>
    <string name="game_has_ended">The game has ended</string>
    <string name="whats_new">What\'s New?</string>
</resources>