<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="10000"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:visible="false"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/About"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_history"
        android:orderInCategory="1"
        android:title="@string/action_history"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        android:icon="@mipmap/ic_delete_white_24dp"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_dice"
        android:orderInCategory="100"
        android:title="@string/dice"
        android:icon="@mipmap/ic_casino_white_24dp"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_dice_num"
        android:orderInCategory="1"
        android:title="1"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_edit"
        android:orderInCategory="5"
        android:visible="false"
        android:title="@string/edit"
        android:icon="@mipmap/ic_create_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_done"
        android:orderInCategory="2"
        android:visible="false"
        android:title="@string/done"
        android:icon="@mipmap/ic_check_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add"
        android:orderInCategory="0"
        android:visible="false"
        android:icon="@mipmap/ic_add_white_48dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_reset"
        android:orderInCategory="5"
        android:title="@string/reset"
        android:visible="false" />

    <item
        android:id="@+id/action_cancel"
        android:orderInCategory="3"
        android:visible="false"
        android:title="@string/cancel"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_fullscreen"
        android:orderInCategory="1000"
        android:title="@string/fullscreen"
        android:visible="false"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_unfinished"
        android:orderInCategory="1000"
        android:visible="false"
        android:title="@string/unfinished"
        android:checkable="true"
        android:checked="false"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_completed"
        android:orderInCategory="1010"
        android:title="@string/completed"
        android:checkable="true"
        android:checked="false"
        android:visible="false"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_edit_presets"
        android:orderInCategory="10"
        android:title="@string/delete_presets"
        android:visible="false"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_item_share"
        app:showAsAction="ifRoom"
        android:visible="false"
        android:orderInCategory="1"
        android:title="Share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider" />

</menu>
