<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/About"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_edit"
        android:orderInCategory="1"
        android:visible="false"
        android:icon="@mipmap/ic_create_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_done"
        android:orderInCategory="2"
        android:visible="false"
        android:icon="@mipmap/ic_check_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_cancel"
        android:orderInCategory="3"
        android:visible="false"
        android:title="@string/cancel"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_graph"
        android:orderInCategory="100"
        android:title="@string/graph"
        android:visible="false"
        app:showAsAction="never"
        android:enabled="true"/>
</menu>
