<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >

    <ListPreference android:title="Number of games on Homepage"
        android:summary="The number of recent games to show on the homepage"
        android:key="prefNumGames"
        android:entries="@array/numGames"
        android:entryValues="@array/numGames"
        android:defaultValue="3"
        />

    <Preference
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:title="@string/themes"
        android:key="prefThemes"
        />

    <PreferenceCategory
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:title="DANGER ZONE!">
        <Preference
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:title="@string/delete_all_games"
            android:key="prefDeleteAllGames"
            />

        <Preference
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:title="@string/delete_time_limit"
            android:enabled="false"
            android:summary="Is this necessary?"
            android:key="prefDeleteTimeLimit"
            />

    </PreferenceCategory>

    <EditTextPreference
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:title="@string/max_num_on_dice"
        android:enabled="false"
        android:summary="Is this necessary?"
        android:key="prefDeleteTimeLimit"
        />


</PreferenceScreen>


