<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_time_limit"
    android:layout_width="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <CheckBox
        android:text="@string/extend"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:id="@+id/checkBoxExtend" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_below="@+id/checkBoxExtend"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    <TextView
        android:text="@string/hour"
        android:paddingBottom="12dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:layout_below="@+id/editTextDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="time"
        android:id="@+id/editTextHour"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_below="@+id/textView6"
        android:maxLength="2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView6"
        android:layout_alignEnd="@+id/textView6" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:maxLength="2"
        android:gravity="center"
        android:id="@+id/editTextMinute"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_below="@+id/textView7"
        android:layout_alignRight="@+id/textView7"
        android:layout_alignEnd="@+id/textView7"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:gravity="center"
        android:maxLength="2"
        android:id="@+id/editTextSeconds"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_below="@+id/textView8"
        android:layout_alignRight="@+id/textView8"
        android:layout_alignEnd="@+id/textView8"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8" />

    <TextView
        android:text="@string/minute"
        android:paddingBottom="12dp"
        android:textStyle="bold"
        android:textAlignment="center"

        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"/>

    <TextView
        android:text="@string/seconds"
        android:layout_alignParentRight="true"
        android:paddingBottom="12dp"
        android:textStyle="bold"
        android:layout_width="60dp"
        android:textAlignment="center"

        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:layout_alignParentTop="true" />

    <TextView
        android:text=":"
        android:textAlignment="center"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_toRightOf="@+id/textView6"
        android:id="@+id/textView9"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_toLeftOf="@+id/editTextMinute"
        android:layout_toStartOf="@+id/editTextMinute" />

    <TextView
        android:text=":"
        android:textAlignment="center"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_below="@+id/textView7"
        android:layout_toRightOf="@+id/editTextMinute"
        android:layout_toLeftOf="@+id/editTextSeconds"
        android:layout_toStartOf="@+id/editTextSeconds" />
    </RelativeLayout>
</RelativeLayout>
